--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -852,6 +852,10 @@
   "boilerplate.containers.Payroll.assessment.year": "السنة",
   "boilerplate.containers.Payroll.assessment.YouMustToChooseEmpMonYear": "يجب عليك اختيار اسم الموظف و الشهر والسنة",
   "boilerplate.containers.Payroll.attachment": "المرفق",
+  "boilerplate.containers.Payroll.Attendance.siteAdministratorName" : "اسم مسؤول الموقع",
+  "boilerplate.containers.Payroll.Attendance.websiteAdministratorPhone" : "رقم مسؤول الموقع",
+  "boilerplate.containers.Payroll.Attendance.anotherNumber" : "رقم اخر",
+  "boilerplate.containers.Payroll.Attendance.locationType" : "نوع الموقع",
   "boilerplate.containers.Payroll.Attendance.absence": "الغياب",
   "boilerplate.containers.Payroll.Attendance.Absence": "عدد ايام الغياب",
   "boilerplate.containers.Payroll.Attendance.Absence3more": "الغياب المتصل يلغى الاجازة الاسبوعية",
