--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -852,6 +852,10 @@
   "boilerplate.containers.Payroll.assessment.year": "Year",
   "boilerplate.containers.Payroll.assessment.YouMustToChooseEmpMonYear": "You must to choose employee name , month and year",
   "boilerplate.containers.Payroll.attachment": "Attachment",
+  "boilerplate.containers.Payroll.Attendance.siteAdministratorName" : "Location Administrator Name",
+  "boilerplate.containers.Payroll.Attendance.websiteAdministratorPhone" : "Location Administrator Phone",
+  "boilerplate.containers.Payroll.Attendance.anotherNumber" : "Another Number",
+  "boilerplate.containers.Payroll.Attendance.locationType" : "Location Type",
   "boilerplate.containers.Payroll.Attendance.absence": "Absence",
   "boilerplate.containers.Payroll.Attendance.Absence": "Absence",
   "boilerplate.containers.Payroll.Attendance.Absence3more": "Continues Absence delete WeekEnd Days",
