add input government in (LocationAttendanceReport - EmployeeLocation) and Solve a problem change password

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -852,6 +852,12 @@
   "boilerplate.containers.Payroll.assessment.year": "السنة",
   "boilerplate.containers.Payroll.assessment.YouMustToChooseEmpMonYear": "يجب عليك اختيار اسم الموظف و الشهر والسنة",
   "boilerplate.containers.Payroll.attachment": "المرفق",
+  "boilerplate.containers.Payroll.Attendance.notWorkingday": "عدد ايام عدم الحضور (الاجازات والغيابات)",
+  "boilerplate.containers.Payroll.Attendance.workingdayRatio": "نسبة الالتزام بالحضور",
+  "boilerplate.containers.Payroll.Attendance.perandLate": "عدد دقائق التأخيرات والاذون",
+  "boilerplate.containers.Payroll.Attendance.perandLateH": "عدد ساعات التأخيرات والاذون",
+  "boilerplate.containers.Payroll.governorate" : "محافظه" ,
+  "boilerplate.containers.Payroll.Attendance.punctualityRate": "نسبة الالتزام بالمواعيد",
   "boilerplate.containers.Payroll.Attendance.siteAdministratorName" : "اسم مسؤول الموقع",
   "boilerplate.containers.Payroll.Attendance.websiteAdministratorPhone" : "رقم مسؤول الموقع",
   "boilerplate.containers.Payroll.Attendance.anotherNumber" : "رقم اخر",
