--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -840,6 +840,7 @@
   "boilerplate.containers.Payroll.assessment.ThereAreQuestionsThatYouDidNotAnswerWhichAre": "There are questions that you did not answer, which are",
   "boilerplate.containers.Payroll.assessment.thisActionWillResetPeerAppraisalForAllEmployeeInCurrentMonth": "This Action Will Reset Peer Appraisal For All Employee In Current Month",
   "boilerplate.containers.Payroll.assessment.ThisFieldIsRequired": "This field is required",
+  "boilerplate.containers.Payroll.governorate" : "Governorate" ,
   "boilerplate.containers.Payroll.assessment.title": "Title",
   "boilerplate.containers.Payroll.assessment.totalDegree": "Grade (%)",
   "boilerplate.containers.Payroll.assessment.totalGrade": "Total Grade",
@@ -852,6 +853,11 @@
   "boilerplate.containers.Payroll.assessment.year": "Year",
   "boilerplate.containers.Payroll.assessment.YouMustToChooseEmpMonYear": "You must to choose employee name , month and year",
   "boilerplate.containers.Payroll.attachment": "Attachment",
+  "boilerplate.containers.Payroll.Attendance.notWorkingday": "Number Days No-attenda",
+  "boilerplate.containers.Payroll.Attendance.workingdayRatio": "Percentage Commitment to Attendance",
+  "boilerplate.containers.Payroll.Attendance.perandLate": "Number Minutes Delays + Permissions",
+  "boilerplate.containers.Payroll.Attendance.perandLateH": "Number Hours + permissions",
+  "boilerplate.containers.Payroll.Attendance.punctualityRate": "Punctuality Rate",
   "boilerplate.containers.Payroll.Attendance.siteAdministratorName" : "Location Administrator Name",
   "boilerplate.containers.Payroll.Attendance.websiteAdministratorPhone" : "Location Administrator Phone",
   "boilerplate.containers.Payroll.Attendance.anotherNumber" : "Another Number",
