--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -684,6 +684,7 @@
   "boilerplate.containers.LocaleToggle.ar": "العربية (مصر)",
   "boilerplate.containers.LocaleToggle.arKsa": "العربية (السعودية)",
   "boilerplate.containers.LocaleToggle.en": "English",
+  "boilerplate.containers.Payroll.governorate" : "المحافظة" ,
   "boilerplate.containers.Payroll.Actions": "الإجراءات",
   "boilerplate.containers.Payroll.add": "اضافة",
   "boilerplate.containers.Payroll.addNew": "اضافة",
@@ -852,7 +853,11 @@
   "boilerplate.containers.Payroll.assessment.year": "السنة",
   "boilerplate.containers.Payroll.assessment.YouMustToChooseEmpMonYear": "يجب عليك اختيار اسم الموظف و الشهر والسنة",
   "boilerplate.containers.Payroll.attachment": "المرفق",
-  "boilerplate.containers.Payroll.Attendance.siteAdministratorName" : "اسم مسؤول الموقع",
+  "boilerplate.containers.Payroll.Attendance.notWorkingday": "عدد ايام عدم الحضور (الاجازات والغيابات)",
+  "boilerplate.containers.Payroll.Attendance.workingdayRatio": "نسبة الالتزام بالحضور",
+  "boilerplate.containers.Payroll.Attendance.perandLate": "عدد دقائق التأخيرات والاذون",
+  "boilerplate.containers.Payroll.Attendance.perandLateH": "عدد ساعات التأخيرات والاذون",
+  "boilerplate.containers.Payroll.Attendance.punctualityRate": "نسبة الالتزام بالمواعيد",
   "boilerplate.containers.Payroll.Attendance.websiteAdministratorPhone" : "رقم مسؤول الموقع",
   "boilerplate.containers.Payroll.Attendance.anotherNumber" : "رقم اخر",
   "boilerplate.containers.Payroll.Attendance.locationType" : "نوع الموقع",
