add page followStaffContractsksa in moudle employee

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1737,6 +1737,14 @@
   "boilerplate.containers.Payroll.Employee.guarantor": "الكفيل",
   "boilerplate.containers.Payroll.Employee.AccruedLeaveBalance": "رصيد الاجازات السنوى",
   "boilerplate.containers.Payroll.Employee.StartDateOfWork": "تاريخ مباشرة العمل",
+  "boilerplate.containers.Payroll.Employee.sourceName" :"مصدر التعيين",
+  "boilerplate.containers.Payroll.Employee.guarantorName": "الكفيل",
+  "boilerplate.containers.Payroll.Employee.startWorkingDate" :"تاريخ بدء العمل",
+  "boilerplate.containers.Payroll.Employee.borderIssuingDate" :"تاريخ إصدار الحدود",
+  "boilerplate.containers.Payroll.Employee.borderExpiry": "انتهاء الحدود",
+  "boilerplate.containers.Payroll.Employee.residencyNumber": "رقم الإقامة",
+  "boilerplate.containers.Payroll.Employee.residencyIssuingDate": "تاريخ إصدار الإقامة",
+  "boilerplate.containers.Payroll.Employee.residencyExpiry" :"انتهاء الإقامة",
   "boilerplate.containers.Payroll.Employee.BorderNumber": "رقم الحدود",
   "boilerplate.containers.Payroll.Employee.ResidenceNumber": "رقم الاقامة",
   "boilerplate.containers.Payroll.employeeCode": "كود الموظف",
