--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1515,6 +1515,14 @@
   "boilerplate.containers.Payroll.edit": "تعديل",
   "boilerplate.containers.Payroll.EditHrNotes": "تعديل ملاحظات الموارد البشرية",
   "boilerplate.containers.Payroll.element": "العنصر",
+  "boilerplate.containers.Payroll.Employee.sourceName" :"مصدر التعيين",
+  "boilerplate.containers.Payroll.Employee.guarantorName": "الكفيل",
+  "boilerplate.containers.Payroll.Employee.startWorkingDate" :"تاريخ بدء العمل",
+  "boilerplate.containers.Payroll.Employee.borderIssuingDate" :"تاريخ إصدار الحدود",
+  "boilerplate.containers.Payroll.Employee.borderExpiry": "انتهاء الحدود",
+  "boilerplate.containers.Payroll.Employee.residencyNumber": "رقم الإقامة",
+  "boilerplate.containers.Payroll.Employee.residencyIssuingDate": "تاريخ إصدار الإقامة",
+  "boilerplate.containers.Payroll.Employee.residencyExpiry" :"انتهاء الإقامة",
   "boilerplate.containers.Payroll.Employee.absent": "التغيب",
   "boilerplate.containers.Payroll.Employee.addOrChangeTemplate": "إضافة أو تغيير القالب",
   "boilerplate.containers.Payroll.Employee.allData": "كل البيانات",
