--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1514,6 +1514,14 @@
   "boilerplate.containers.Payroll.edit": "Edit",
   "boilerplate.containers.Payroll.EditHrNotes": "Edit Hr Notes",
   "boilerplate.containers.Payroll.element": "Element",
+  "boilerplate.containers.Payroll.Employee.sourceName" :"Source Name",
+  "boilerplate.containers.Payroll.Employee.guarantorName": "Guarantor Name",
+  "boilerplate.containers.Payroll.Employee.startWorkingDate" :"Start Working Date",
+  "boilerplate.containers.Payroll.Employee.borderIssuingDate" :"Border Issuing Date",
+  "boilerplate.containers.Payroll.Employee.borderExpiry": "Border Expiry",
+  "boilerplate.containers.Payroll.Employee.residencyNumber": "Residency Number",
+  "boilerplate.containers.Payroll.Employee.residencyIssuingDate": "Residency Issuing Date",
+  "boilerplate.containers.Payroll.Employee.residencyExpiry" :"Residency Expiry",
   "boilerplate.containers.Payroll.Employee.absent": "Absent",
   "boilerplate.containers.Payroll.Employee.addOrChangeTemplate": "Add Or Change Template",
   "boilerplate.containers.Payroll.Employee.allData": "All Data",
