update print and input and traslate in page name (Form2Insurance)

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2011,8 +2011,8 @@
   "boilerplate.containers.Payroll.insurance.socialInsuranceNumberMustBeLessThan20Number": "يجب أن يكون رقم التأمين الاجتماعي أقل من 20 رقم",
   "boilerplate.containers.Payroll.insurance.StopInsuranceCreateTitle": "أنشاء ايقاف الموظف",
   "boilerplate.containers.Payroll.insurance.StopInsuranceEditTitle": "تعديل ايقاف الموظف",
-  "boilerplate.containers.Payroll.insurance.toDate": "ألي تاريخ",
-  "boilerplate.containers.Payroll.insurance.totalFixed": "اجمالي الراتب الثابت",
+  "boilerplate.containers.Payroll.insurance.toDate": "الي التاريخ",
+  "boilerplate.containers.Payroll.insurance.totalInsurance": "اجمالي الراتب التاميني",
   "boilerplate.containers.Payroll.insurance.totalVariable": "اجمالي الراتب المتغير",
   "boilerplate.containers.Payroll.insurance.updateByPercent": "تعديل بنسبة %",
   "boilerplate.containers.Payroll.insurance.updateByValue": "تعديل القيمة",
