update translate and hidden colume in page NewsCreate

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1260,7 +1260,7 @@
   "boilerplate.containers.Payroll.Attendance.regularWorkDay": "Regular Work Day",
   "boilerplate.containers.Payroll.Attendance.Report": "Report",
   "boilerplate.containers.Payroll.Attendance.reqBeforeShiftInMinute": "Request Not Allowed Before Shift Start by Minute",
-  "boilerplate.containers.Payroll.Attendance.reqDayNotAllow": "Request Not Allowed on This Day",
+  "boilerplate.containers.Payroll.Attendance.reqDayNotAllow": "Days when permission is not allowed",
   "boilerplate.containers.Payroll.Attendance.requestSerial": "Request Serial",
   "boilerplate.containers.Payroll.Attendance.requiredDays": "Required Days",
   "boilerplate.containers.Payroll.Attendance.requiredWorkH": "Required Work H",
@@ -3039,7 +3039,7 @@
   "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacHourCheck": "Check Hour in Replacement Day",
   "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacOvertimeMinNo": "Minimum Minutes for Overtime in Replacement Day",
   "boilerplate.containers.Payroll.vac.Transaction.reqBeforeShiftInMinute": "Request Not Allowed Before Shift Start by Minute",
-  "boilerplate.containers.Payroll.vac.Transaction.reqDayNotAllow": "Request Not Allowed on This Day",
+  "boilerplate.containers.Payroll.vac.Transaction.reqDayNotAllow": "Days when permission is not allowed",
   "boilerplate.containers.Payroll.vac.Transaction.reqDuringShift": "Request Allowed During Shift",
   "boilerplate.containers.Payroll.vac.Transaction.reqNotAllowInShiftVac": "Request Not Allowed in Shift Leave",
   "boilerplate.containers.Payroll.vac.Transaction.startDate": "Start date",
