--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1260,7 +1260,7 @@
   "boilerplate.containers.Payroll.Attendance.regularWorkDay": "ايالم العمل العادية",
   "boilerplate.containers.Payroll.Attendance.Report": "التقرير",
   "boilerplate.containers.Payroll.Attendance.reqBeforeShiftInMinute": "الطلب غير مسموح قبل بداية الدوام",
-  "boilerplate.containers.Payroll.Attendance.reqDayNotAllow": "الايام التى لا يسمح بطلب اجازة فيها",
+  "boilerplate.containers.Payroll.Attendance.reqDayNotAllow": "الايام التى لا يسمح بطلب الاذن فيها",
   "boilerplate.containers.Payroll.Attendance.requestSerial": "طلب المسلسل",
   "boilerplate.containers.Payroll.Attendance.requiredDays": "ايام العمل المقررة",
   "boilerplate.containers.Payroll.Attendance.requiredWorkH": "ساعات العمل المقررة",
@@ -3040,7 +3040,7 @@
   "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacHourCheck": "التحقق من الساعة في يوم بديل",
   "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacOvertimeMinNo": "أقل عدد من الدقائق للإضافية في يوم بديل",
   "boilerplate.containers.Payroll.vac.Transaction.reqBeforeShiftInMinute": "الطلب غير مسموح قبل بداية الدوام",
-  "boilerplate.containers.Payroll.vac.Transaction.reqDayNotAllow": "الايام التى لا يسمح بطلب اجازة فيها",
+  "boilerplate.containers.Payroll.vac.Transaction.reqDayNotAllow": "الايام التى لا يسمح بطلب الاذن فيها",
   "boilerplate.containers.Payroll.vac.Transaction.reqDuringShift": "طلب الاجازة خلال الدوام",
   "boilerplate.containers.Payroll.vac.Transaction.reqNotAllowInShiftVac": "لا يمكن طلب اجازة اثناء اجازة الدوام",
   "boilerplate.containers.Payroll.vac.Transaction.startDate": "تاريخ البدء",
