finish Average Peer Appraisal Report page, fix issue in PeerAppraisalList with hide training request page from exam and api

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -797,6 +797,12 @@
   "boilerplate.containers.Payroll.assessment.noFilesUploaded": "لم يتم تحميل أي ملفات",
   "boilerplate.containers.Payroll.assessment.noStuffFound": "لم يتم العثور على موظفين",
   "boilerplate.containers.Payroll.assessment.notDone": "لم يتم",
+  "boilerplate.containers.Payroll.assessment.evaluators": "المقيمون",
+  "boilerplate.containers.Payroll.assessment.evaluatorsDone": "مقيمين انهو التقييم",
+  "boilerplate.containers.Payroll.assessment.totalEvaluation": "التقييم الإجمالي",
+  "boilerplate.containers.Payroll.assessment.averagePeerAppraisalReport": "تقييم الزملاء",
+  "boilerplate.containers.Payroll.assessment.evaluatedEmployeeData": "بيانات الموظفين التي تم تقييمها",
+  "boilerplate.containers.Payroll.assessment.evaluatorEmployeeData": "بيانات الموظف المقيم",
   "boilerplate.containers.Payroll.assessment.notEffective": "غير فعالة",
   "boilerplate.containers.Payroll.assessment.NoteForEmployee": "ملاحظات للموظف",
   "boilerplate.containers.Payroll.assessment.oneByOne": "واحدا تلو الآخر",
