--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -797,6 +797,12 @@
   "boilerplate.containers.Payroll.assessment.noFilesUploaded": "No Files Uploaded",
   "boilerplate.containers.Payroll.assessment.noStuffFound": "No Employee Found",
   "boilerplate.containers.Payroll.assessment.notDone": "Not Done",
+  "boilerplate.containers.Payroll.assessment.evaluators": "Evaluators",
+  "boilerplate.containers.Payroll.assessment.evaluatorsDone": "Evaluators Done",
+  "boilerplate.containers.Payroll.assessment.totalEvaluation": "Total Evaluation",
+  "boilerplate.containers.Payroll.assessment.averagePeerAppraisalReport": "Average Peer Appraisal Report",
+  "boilerplate.containers.Payroll.assessment.evaluatedEmployeeData": "Evaluated Employee Data",
+  "boilerplate.containers.Payroll.assessment.evaluatorEmployeeData": "Evaluator Employee Data",
   "boilerplate.containers.Payroll.assessment.notEffective": "Not Effective",
   "boilerplate.containers.Payroll.assessment.NoteForEmployee": "Note For Employee",
   "boilerplate.containers.Payroll.assessment.oneByOne": "One By One",
